Cambio en modelo de datos de usuario oauth2